# frifte

./: .gitignore  README.md  _config.yml  index.html
_includes/head/: nist_header_footer.html
doc/api/: annotated.html  class_f_r_i_f_1_1_e_f_s_1_1_crease-members.html  class_f_r_i_f_1_1_e_f_s_1_1_crease.html  class_f_r_i_f_1_1_e_f_s_1_1_pattern_classification-members.html  class_f_r_i_f_1_1_e_f_s_1_1_pattern_classification.html  class_f_r_i_f_1_1_e_f_s_1_1_quality_measure-members.html  class_f_r_i_f_1_1_e_f_s_1_1_quality_measure.html  class_f_r_i_f_1_1_evaluations_1_1_exemplar1_n_1_1_extraction_interface-members.html  class_f_r_i_f_1_1_evaluations_1_1_exemplar1_n_1_1_extraction_interface.html  class_f_r_i_f_1_1_evaluations_1_1_exemplar1_n_1_1_search_interface-members.html  class_f_r_i_f_1_1_evaluations_1_1_exemplar1_n_1_1_search_interface.html  classes.html  common_8h.html  common_8h_source.html  dir_01dcc045c9934696bf7edd904823b1ba.html  dir_563b11ce76940545b36d32084ef22172.html  dir_6ab0278b0cc56d8e4379a714f11fcacf.html  dir_7a3d2d370ab84448ce2f8cccb11aaaef.html  dir_920f00b58e27b1a522504defec921438.html  dir_9899a17b0d7648b9fa4f0a0a61f952e9.html  dir_c722780726c749c28bb4577cb4598098.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  e1n.html  e1n_8h.html  e1n_8h_source.html  efs_8h.html  efs_8h_source.html  evaluations_8h.html  evaluations_8h_source.html  files.html  frif_8h.html  frif_8h_source.html  frifte_8h.html  frifte_8h_source.html  functions.html  functions_enum.html  functions_func.html  functions_type.html  functions_vars.html  (+89 more)
doc/api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  (+79 more)
doc/doxygen/: README.md  frif-api.conf  frifte-api.conf
doc/doxygen/assets/: footer.html  header.html
e1n/: README.md  index.html
e1n/libfrif_e1n/: CMakeLists.txt  README.md  libfrif_e1n.cpp
e1n/libfrifte_e1n/: CMakeLists.txt  README.md  libfrifte_e1n.cpp
e1n/nullimpl/: CMakeLists.txt  README.md  frif_e1n_nullimpl.cpp  frif_e1n_nullimpl.h  frifte_e1n_nullimpl.cpp  frifte_e1n_nullimpl.h
e1n/results/: index.html
e1n/results/IDEMIA+0001/: 404.html  fpvte-2012class-a.html  fpvte-2012class-b.html  fpvte-2012class-c.html  index.html  metrics.html  participation-information.html  search_index.json  timing-sample.html
e1n/results/Neurotechnology+0104/: 404.html  fpvte-2012class-a.html  fpvte-2012class-b.html  fpvte-2012class-c.html  index.html  metrics.html  participation-information.html  search_index.json  timing-sample.html
e1n/results/dermalog+0003/: 404.html  fpvte-2012class-a.html  fpvte-2012class-b.html  fpvte-2012class-c.html  index.html  metrics.html  participation-information.html  search_index.json  timing-sample.html
e1n/results/griauleimpl+0007/: 404.html  fpvte-2012class-a.html  fpvte-2012class-b.html  fpvte-2012class-c.html  index.html  metrics.html  participation-information.html  search_index.json  timing-sample.html
e1n/results/hisign+000C/: 404.html  fpvte-2012class-a.html  fpvte-2012class-b.html  fpvte-2012class-c.html  index.html  metrics.html  participation-information.html  search_index.json  timing-sample.html
e1n/results/identy+0001/: 404.html  fpvte-2012class-a.html  fpvte-2012class-b.html  fpvte-2012class-c.html  index.html  metrics.html  participation-information.html  search_index.json  timing-sample.html
e1n/results/innovatrics+0001/: 404.html  fpvte-2012class-a.html  fpvte-2012class-b.html  fpvte-2012class-c.html  index.html  metrics.html  participation-information.html  search_index.json  timing-sample.html
e1n/results/innovatrics+0002/: 404.html  fpvte-2012class-a.html  fpvte-2012class-b.html  fpvte-2012class-c.html  index.html  metrics.html  participation-information.html  search_index.json  timing-sample.html
e1n/results/miaxis+0003/: 404.html  fpvte-2012class-a.html  fpvte-2012class-b.html  fpvte-2012class-c.html  index.html  metrics.html  participation-information.html  search_index.json  timing-sample.html
e1n/results/nec+0002/: 404.html  fpvte-2012class-a.html  fpvte-2012class-b.html  fpvte-2012class-c.html  index.html  metrics.html  participation-information.html  search_index.json  timing-sample.html
e1n/results/roc+0002/: 404.html  fpvte-2012class-a.html  fpvte-2012class-b.html  fpvte-2012class-c.html  index.html  metrics.html  participation-information.html  search_index.json  timing-sample.html
e1n/results/tech5impl+0005/: 404.html  fpvte-2012class-a.html  fpvte-2012class-b.html  fpvte-2012class-c.html  index.html  metrics.html  participation-information.html  search_index.json  timing-sample.html
e1n/results/tech5impl+0008/: 404.html  (+8 more)
e1n/upload/: index.html
e1n/validation/: CHECKSUMS  README.md  VERSION  validate
e1n/validation/src/: CMakeLists.txt  frif_e1n_data.cpp  frif_e1n_data.h  frif_e1n_validation.cpp  frif_e1n_validation.h  frifte_e1n_data.cpp  frifte_e1n_data.h  frifte_e1n_validation.cpp  frifte_e1n_validation.h
e1n/validation/src/data/: frif_e1n_data_contactless-a.h  frif_e1n_data_palm-j.h  frif_e1n_data_palm-n.h  frif_e1n_data_roll-u-palm-n.h  frif_e1n_data_roll-u-roll-v-slap-r.h  frif_e1n_data_roll-u.h  frif_e1n_data_roll-v.h  frif_e1n_data_segmented-slap-r.h  frif_e1n_data_slap-r-contactless-a.h  frif_e1n_data_slap-r-roll-u.h  frif_e1n_data_slap-r.h
include/frif/: common.h  e1n.h  efs.h  frif.h  io.h  util.h
include/frifte/: common.h  e1n.h  efs.h  evaluations.h  frifte.h  io.h  util.h
libfrif/: CMakeLists.txt  README.md  libfrif_common.cpp  libfrif_efs.cpp  libfrif_io.cpp  libfrif_util.cpp
libfrifte/: CMakeLists.txt  README.md  libfrifte_common.cpp  libfrifte_efs.cpp  libfrifte_io.cpp  libfrifte_util.cpp
resources/: public_key.asc
upload/: index.html
(+1 files in other folders)
